--- a/index.html
+++ b/index.html
@@ -14,14 +14,35 @@
             align-items: center;
             min-height: 100vh;
             font-family: Arial, sans-serif;
+            overflow: hidden; /* Prevent scrollbars */
         }
         #game-container {
             position: relative;
         }
+        #loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #000; /* Match body background */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999; /* On top of everything */
+        }
+        #loading-overlay img {
+            max-width: 80%;
+            max-height: 80%;
+            /* Add any other specific styling for the GIF if needed */
+        }
     </style>
 </head>
 <body>
+    <div id="loading-overlay">
+        <img src="assets/loadingAnimation.gif" alt="Loading..." />
+    </div>
     <div id="game-container"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
-</html> 
+</html>
