Обновлены файлы index.html, README.md и сцены игры. В index.html улучшена обработка ошибок автозапуска видео. В README.md добавлены инструкции по установке и игре. Удален устаревший файл favicon.ico. В GameScene и других сценах улучшена логика и добавлены новые функции, включая обработку групп объектов и улучшение интерфейса. Обновлен менеджер сохранений для поддержки новых скинов и цен.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             // Пытаемся запустить видео
             video.play().catch(function(error) {
-                console.error('Автовоспроизведение видео не сработало:', error);
+                // Silent error handling for autoplay restrictions
             });
             
             // После окончания видео сразу запускаем игру
